--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-icons": "^1.3.2",
@@ -41,7 +42,10 @@
     "@tiptap/suggestion": "^2.11.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
@@ -61,6 +65,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
